# OpenNOW

./: .gitignore  AGENTS.md  CHANGELOG_MAC.md
.agents/skills/new-pr-and-branch/: SKILL.md
.github/workflows/: auto-build.yml  codeql.yml  release.yml
locales/: en.json  es.json  fr.json  ja.json  ko.json  pl.json  ro.json  tr.json  zh.json
native/opennow-streamer/: Cargo.toml  README.md
native/opennow-streamer/src/: backend.rs  gstreamer_backend.rs  gstreamer_input.rs  gstreamer_pipeline.rs  gstreamer_platform.rs  input.rs  main.rs  protocol.rs  sdp.rs
opennow-stable/: README.md  package-lock.json  package.json  webos.vite.config.ts
opennow-stable/scripts/: build-native-streamer.mjs  build-webos.mjs  bundle-gstreamer-runtime.mjs  dev.mjs  ensure-electron-installed.mjs  run-tests.mjs  sync-release-version.mjs
opennow-stable/src/main/: index.ts  mediaPaths.ts  nativeCloudGsync.ts  settings.ts  updater.ts  videoAcceleration.test.ts  videoAcceleration.ts
opennow-stable/src/main/gfn/: accountConnections.ts  clientHeaders.ts  cloudmatch.test.ts  cloudmatch.ts  games.ts  paginatedApps.test.ts  paginatedApps.ts  paywall.ts  persistentStorage.test.ts  persistentStorage.ts  proxyFetch.test.ts  proxyFetch.ts  proxyUrl.ts  publicGames.ts  request.ts  signaling.ts  subscription.test.ts  subscription.ts  types.ts
opennow-stable/src/preload/: index.ts
opennow-stable/src/shared/: cloudGsync.test.ts  cloudGsync.ts  directLaunch.test.ts  directLaunch.ts  entitlements.test.ts  gfn.test.ts  gfn.ts  ipc.ts  mediaPlayback.ts  nativeStreamer.ts
(+65 files in other folders)
